--- a/exercicios/solo/index.html
+++ b/exercicios/solo/index.html
@@ -11,7 +11,7 @@
     
     <header>
         <h1>
-            Frases Midnight Gospel 
+            The Midnight Gospel 
         </h1>
         <p>
             Frases Que te fazem refletir 
@@ -26,10 +26,10 @@
     <main>
        <article>
            <h1>
-            The Midnigth Gospel
+            Conhecendo The Midnigth Gospel
            </h1>
            <p>
-            The Midnight Gospel é a mais nova animação produzida e lançada pela <a href="https://www.netflix.com/br/" target="_blank">Netflix</a>.. Criada e dirigida por Pendleton Ward (criador de Hora de Aventura) com a ajuda do comediante Duncan Trussell, co-creator que também dubla a série, The Midnight Gospel teve sua estreia na plataforma dia 20 de abril de 2020. Com classificação indicativa para maiores de 18 anos, entra na categoria de animação para adultos, mas o que a diferencia das demais nessa categoria é seu formato em <a href="https://pt.wikipedia.org/wiki/Podcasting">Podcast</a> e os assuntos abordados por episódio. Sua primeira temporada contém 8 episódios de aproximadamente 25 minutos cada, mas por conta de sua apresentação ao público ser muito recente, a Netflix ainda não foi capaz de confirmar se haverá uma continuação para a história.
+            The Midnight Gospel é a animação produzida e lançada pela <a href="https://www.netflix.com/br/" target="_blank">Netflix</a>.. Criada e dirigida por Pendleton Ward (criador de Hora de Aventura) com a ajuda do comediante Duncan Trussell, co-creator que também dubla a série, The Midnight Gospel teve sua estreia na plataforma dia 20 de abril de 2020. Com classificação indicativa para maiores de 18 anos, entra na categoria de animação para adultos, mas o que a diferencia das demais nessa categoria é seu formato em <a href="https://pt.wikipedia.org/wiki/Podcasting">Podcast</a> e os assuntos abordados por episódio. Sua primeira temporada contém 8 episódios de aproximadamente 25 minutos cada, mas por conta de sua apresentação ao público ser muito recente, a Netflix ainda não foi capaz de confirmar se haverá uma continuação para a história.
             </p>
 
             <p>
@@ -47,8 +47,6 @@
 
             <P>
                 A animação tem características marcantes que definem bem seu estilo; sempre com muitas cores em diferentes tons, diversos formatos e acontecimentos inimagináveis, TMG possui um ar psicodélico que imerge o espectador em uma realidade alucinante e enigmática. A onda de informações visuais e sonoras é tão grande que é impossível focar em tudo que se passa, o cérebro não consegue responder a velocidade e quantidade de estímulos exibidos. Assim, a série transmite uma de suas mensagens em forma de metalinguagem, ao abordar a meditação como um de seus assuntos principais e instigar o foco do espectador ao submetê-lo a um turbilhão de coisas acontecendo ao mesmo tempo. É o tipo de série que se precisa ver mais de uma vez para entender, pois a partir dos temas que aborda é capaz de mudar a maneira como enxergamos certos conceitos que abrangem nossas vidas como seres humanos, e que muitas vezes passam despercebidos em nosso dia-a-dia ou são ignorados como forma de fugir do sofrimento inevitável que teríamos se eles viessem à tona. TMG é, então, um show que requer mais do que apenas idade para ser assistido, é necessário ter muito foco e mente aberta para entrar na “brisa” que o seriado nos propõe a viajar.
-
-
             </P>
 
 
