--- a/exercicios/ex022/fundo001.html
+++ b/exercicios/ex022/fundo001.html
@@ -4,7 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste de imagem de fundo</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        body{
+    background-image: url(imagens/wallpaper001.jpg);
+}
+
+.quadrado{
+    display: inline-block;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: lightgray;
+    width: 300px;
+    height: 300px;
+}
+
+
+#q1{
+    background-color: skyblue;
+}
+
+#q2{
+    background-image: linear-gradient(to bottom, yellow, red);
+}
+
+#q3{
+    background-image: url(imagens/pattern003.png);
+}
+
+    </style>
+    
 </head>
 <body>
     <div class="quadrado" id="q1">
