--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            /* shorthand - background
+                color > image > position > repeat > [size] > attachment           
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
 
@@ -29,6 +37,18 @@
         <h1>
             Teste de imagem de fundo</h1>
             <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque fuga assumenda itaque saepe rem expedita. Vel animi ducimus ipsum dolores unde sunt dolorem, eum, iusto id adipisci ad quisquam perspiciatis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis quod fuga natus doloribus dignissimos voluptates ea deserunt modi esse quas eaque quam ab veritatis voluptate ipsa architecto, ullam animi minima Lorem ipsum dolor sit amet consectetur adipisicing elit. In voluptatem quisquam quasi asperiores doloremque odio ut voluptate excepturi necessitatibus, accusantium aut obcaecati exercitationem ad ducimus consequatur amet delectus mollitia. Similique.
+            </p><p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque fuga assumenda itaque saepe rem expedita. Vel animi ducimus ipsum dolores unde sunt dolorem, eum, iusto id adipisci ad quisquam perspiciatis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis quod fuga natus doloribus dignissimos voluptates ea deserunt modi esse quas eaque quam ab veritatis voluptate ipsa architecto, ullam animi minima Lorem ipsum dolor sit amet consectetur adipisicing elit. In voluptatem quisquam quasi asperiores doloremque odio ut voluptate excepturi necessitatibus, accusantium aut obcaecati exercitationem ad ducimus consequatur amet delectus mollitia. Similique.
+            </p><p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque fuga assumenda itaque saepe rem expedita. Vel animi ducimus ipsum dolores unde sunt dolorem, eum, iusto id adipisci ad quisquam perspiciatis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis quod fuga natus doloribus dignissimos voluptates ea deserunt modi esse quas eaque quam ab veritatis voluptate ipsa architecto, ullam animi minima Lorem ipsum dolor sit amet consectetur adipisicing elit. In voluptatem quisquam quasi asperiores doloremque odio ut voluptate excepturi necessitatibus, accusantium aut obcaecati exercitationem ad ducimus consequatur amet delectus mollitia. Similique.
+            </p><p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque fuga assumenda itaque saepe rem expedita. Vel animi ducimus ipsum dolores unde sunt dolorem, eum, iusto id adipisci ad quisquam perspiciatis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis quod fuga natus doloribus dignissimos voluptates ea deserunt modi esse quas eaque quam ab veritatis voluptate ipsa architecto, ullam animi minima Lorem ipsum dolor sit amet consectetur adipisicing elit. In voluptatem quisquam quasi asperiores doloremque odio ut voluptate excepturi necessitatibus, accusantium aut obcaecati exercitationem ad ducimus consequatur amet delectus mollitia. Similique.
+            </p><p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque fuga assumenda itaque saepe rem expedita. Vel animi ducimus ipsum dolores unde sunt dolorem, eum, iusto id adipisci ad quisquam perspiciatis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis quod fuga natus doloribus dignissimos voluptates ea deserunt modi esse quas eaque quam ab veritatis voluptate ipsa architecto, ullam animi minima Lorem ipsum dolor sit amet consectetur adipisicing elit. In voluptatem quisquam quasi asperiores doloremque odio ut voluptate excepturi necessitatibus, accusantium aut obcaecati exercitationem ad ducimus consequatur amet delectus mollitia. Similique.
+            </p><p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque fuga assumenda itaque saepe rem expedita. Vel animi ducimus ipsum dolores unde sunt dolorem, eum, iusto id adipisci ad quisquam perspiciatis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis quod fuga natus doloribus dignissimos voluptates ea deserunt modi esse quas eaque quam ab veritatis voluptate ipsa architecto, ullam animi minima Lorem ipsum dolor sit amet consectetur adipisicing elit. In voluptatem quisquam quasi asperiores doloremque odio ut voluptate excepturi necessitatibus, accusantium aut obcaecati exercitationem ad ducimus consequatur amet delectus mollitia. Similique.
+            </p><p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque fuga assumenda itaque saepe rem expedita. Vel animi ducimus ipsum dolores unde sunt dolorem, eum, iusto id adipisci ad quisquam perspiciatis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis quod fuga natus doloribus dignissimos voluptates ea deserunt modi esse quas eaque quam ab veritatis voluptate ipsa architecto, ullam animi minima Lorem ipsum dolor sit amet consectetur adipisicing elit. In voluptatem quisquam quasi asperiores doloremque odio ut voluptate excepturi necessitatibus, accusantium aut obcaecati exercitationem ad ducimus consequatur amet delectus mollitia. Similique.
             </p>
     </main>
