--- a/Desafios/Modulo 2/d012/cordel.html
+++ b/Desafios/Modulo 2/d012/cordel.html
@@ -11,7 +11,7 @@
         <h1>
             Cordel Moderno
         </h1>
-        <p>
+        <p class="box">
             Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
         </p>
     </header>
