--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -4,8 +4,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tabela 2</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        table{
+            width: 500px;
+            border-collapse: collapse;
+        }
+
+        td, th{
+            border: 1px solid black;
+            padding: 10px;
+        }
+
+        thead, tfoot{
+            background-color: grey;
+            color: white;
+        }
+
+        .num{
+            text-align: right;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Uso de tabelas grandes</h1>
+    <!--
+        ANATOMIA PARA TABELAS GRANDES
+        TABLE
+            THEAD
+                TR, TD, TH
+            TBODY
+                TR, TD, TH
+            TFOOT
+                TR, TD, TH
+    -->
+    <table>
+        <th><!--THEAD-->
+            <tr>
+                <th>
+                    estado
+                </th>
+                <th>
+                    população
+                </th>
+            </tr>
+        </th>
+        <tb><!--TBODY-->
+            <tr>
+                <td>
+                    são paulo
+                </td>
+                <td class="num"> 
+                    45.919.049
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Minas Gerais
+                </td>
+                <td class="num">
+                    21.168.791
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Rio De Janeiro
+                </td>
+                <td class="num">
+                    17.264.943
+                </td>
+            </tr>
+              
+        </tb>
+        <tf><!--TFOOT-->
+            <tr>
+                <th>
+                    total de habitantes
+                </th>
+                <td class="num">
+                    <strong>
+                        84.352.783
+                    </strong>
+                </td>
+            </tr>
+        </tf>
+    </table>
 </body>
 </html>
