--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -14,12 +14,19 @@
             border-collapse: collapse;
         }
 
+        caption{
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
         td, th{
             border: 1px solid black;
             padding: 10px;
         }
 
-        thead, tfoot{
+        th, tf{
             background-color: grey;
             color: white;
         }
@@ -34,6 +41,7 @@
     <!--
         ANATOMIA PARA TABELAS GRANDES
         TABLE
+            CAPTION (legenda)
             THEAD
                 TR, TD, TH
             TBODY
@@ -42,14 +50,11 @@
                 TR, TD, TH
     -->
     <table>
-        <th><!--THEAD-->
+        <caption>população das unidades federativas</caption>
+        <thead> 
             <tr>
-                <th>
-                    estado
-                </th>
-                <th>
-                    população
-                </th>
+                <th scope="col">estado</th>
+                <th scope="col" style="width: 50px;">população</th>
             </tr>
         </th>
         <tb><!--TBODY-->
@@ -81,7 +86,7 @@
         </tb>
         <tf><!--TFOOT-->
             <tr>
-                <th>
+                <th scope="row">
                     total de habitantes
                 </th>
                 <td class="num">
