--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -9,6 +9,12 @@
             font-family: Arial, Helvetica, sans-serif;
         }
 
+        h1{
+            text-align: center;
+            color: rgba(0, 0, 255, 0.541);
+            text-shadow: 1px 1px rgba(0, 0, 0, 0.459);
+        }
+
         table{
             width: 500px;
             border-collapse: collapse;
@@ -29,6 +35,10 @@
         th, tf{
             background-color: grey;
             color: white;
+        }
+
+        tbody > tr:nth-child(even){
+            background-color: lightgray;
         }
 
         .num{
@@ -57,7 +67,7 @@
                 <th scope="col" style="width: 50px;">população</th>
             </tr>
         </th>
-        <tb><!--TBODY-->
+        <tbody><!--TBODY-->
             <tr>
                 <td>
                     são paulo
@@ -66,6 +76,7 @@
                     45.919.049
                 </td>
             </tr>
+
             <tr>
                 <td>
                     Minas Gerais
@@ -74,6 +85,7 @@
                     21.168.791
                 </td>
             </tr>
+
             <tr>
                 <td>
                     Rio De Janeiro
@@ -82,13 +94,128 @@
                     17.264.943
                 </td>
             </tr>
-              
+
+              <tr>
+                <td>
+                    Bahia
+                </td>
+                <td class="num">
+                    14.136.417
+                </td>
+            </tr>
+
+              <tr>
+                  <td>
+                    Paraná
+                  </td>
+                  <td class="num">
+                    11.443.208
+                  </td>
+              </tr>
+
+              <tr>
+                <td>
+                    Rio Grande do Sul
+                </td>
+                <td class="num">
+                    10.880.506
+                </td>
+              </tr>
+
+              <tr>
+                <td>
+                    Pernambuco
+                </td>
+                <td class="num">
+                    9.058.155
+                </td>
+              </tr>
+
+              <tr>
+                <td>
+                    Ceará
+                </td>
+                <td class="num">
+                    8.791.688
+                </td>
+              </tr>
+
+              <tr>
+                <td>
+                    Pará
+                </td>
+                <td class="num">
+                    8.116.132
+                </td>
+              </tr>
+
+              <tr>
+                <td>
+                    Santa Catarina
+                </td>
+                <td class="num">
+                    7.609.601
+                </td>
+              </tr>
+
+              <tr>
+                <td>
+                    Goiás
+                </td>
+                <td class="num">
+                    7.055.228
+                </td>
+              </tr>
+
+              <tr>
+                <td>
+                    Maranhão
+                </td>
+                <td class="num">
+                    6.755.152
+                </td>
+              </tr>
+
+              <tr>
+                <td>
+                    Paraíba 
+                </td>
+                <td class="num">
+                    3.974.495
+                </td>
+              </tr>
+
+              <tr>
+                <td>
+                    Amazonas
+                </td>
+                <td class="num">
+                    3.941.175
+                </td>
+              </tr>
+
+              <tr>
+                <td>
+                    Espírito Santo
+                </td>
+                <td class="num">
+                    3.833.486
+                </td>
+              </tr>
+
+              <tr>
+                <td>
+                    Mato Grosso
+                </td>
+                <td class="num">
+                    3.658.813
+                </td>
+              </tr>
+
         </tb>
         <tf><!--TFOOT-->
             <tr>
-                <th scope="row">
-                    total de habitantes
-                </th>
+                <th scope="row">total de habitantes</th>
                 <td class="num">
                     <strong>
                         84.352.783
@@ -96,6 +223,7 @@
                 </td>
             </tr>
         </tf>
+
     </table>
 </body>
 </html>
