--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -18,6 +18,7 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         caption{
@@ -37,8 +38,20 @@
             color: white;
         }
 
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: black;
+        }
+
+        tbody > tr:nth-child(odd){
+            background-color: white;
+            font-weight: bold;
+        }
+
         tbody > tr:nth-child(even){
             background-color: lightgray;
+            font-weight: bold;
         }
 
         .num{
@@ -96,6 +109,69 @@
             </tr>
 
               <tr>
+                <td>
+                    Bahia
+                </td>
+                <td class="num">
+                    14.136.417
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    Bahia
+                </td>
+                <td class="num">
+                    14.136.417
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    Bahia
+                </td>
+                <td class="num">
+                    14.136.417
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    Bahia
+                </td>
+                <td class="num">
+                    14.136.417
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    Bahia
+                </td>
+                <td class="num">
+                    14.136.417
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    Bahia
+                </td>
+                <td class="num">
+                    14.136.417
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    Bahia
+                </td>
+                <td class="num">
+                    14.136.417
+                </td>
+            </tr>
+
+            <tr>
                 <td>
                     Bahia
                 </td>
@@ -218,7 +294,7 @@
                 <th scope="row">total de habitantes</th>
                 <td class="num">
                     <strong>
-                        84.352.783
+                        183.606.839
                     </strong>
                 </td>
             </tr>
